--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cv",
-  "homepage": "http://MatiasEOtero.github.io/CV",
+  "homepage": "http://MatiasEOtero.github.io/cv",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
